k8s/apps/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  labels:
    app: grafana
  annotations:
    tailscale.com/proxy-class: "high-bandwidth"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: grafana-service
      port:
        number: 3000
  tls:
    - hosts:
        - grafana.tail57bf10.ts.net
